# Devaudit

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml
devaudit/: cli.py
devaudit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
devaudit/core/: __init__.py  config.py  remediation.py  reporter.py  scanner.py
devaudit/modules/: __init__.py  base_check.py
devaudit/modules/dependencies/: __init__.py  scanner.py  vulnerabilities.json
devaudit/modules/docker/: __init__.py  scanner.py
devaudit/modules/git/: __init__.py  scanner.py
devaudit/modules/network/: __init__.py  scanner.py
devaudit/modules/privacy/: __init__.py  scanner.py
devaudit/modules/secrets/: __init__.py  scanner.py
devaudit/modules/system/: __init__.py  scanner.py
tests/modules/: test_dependencies.py  test_docker.py  test_privacy.py
tests/modules/secrets/: test_github_patterns.py
translations/: ar.json  en.json
